# androidpp

./: .gitignore  CMakeLists.txt
android/: CMakeLists.txt  android.cpp  android.h
android++/: CMakeLists.txt  IdentifierErasure.h  LogHelper.h  NeverDestroyed.h  Platform.h  PointerTypes.h
android/android/: opengl.h
android/android/app/: Activity.cpp  Activity.h  CMakeLists.txt
android/android/content/: CMakeLists.txt  ComponentName.cpp  ComponentName.h  Context.cpp  Intent.cpp  Intent.h
android/android/content/res/: CMakeLists.txt
android/android/graphics/: CMakeLists.txt  SurfaceTexture.cpp  SurfaceTexture.h
android/android/media/: AudioTrack.h  CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h
android/android/opengl/: CMakeLists.txt  GLSurfaceView.cpp  GLSurfaceView.h  Matrix.cpp  Matrix.h
android/android/os/: Bundle.cpp  Bundle.h  CMakeLists.txt  Handler.cpp  Handler.h  IBinder.h  Looper.cpp  Message.cpp  Message.h  Parcel.cpp  Parcel.h  ParcelFileDescriptor.cpp  ParcelFileDescriptor.h  Parcelable.h
android/android/text/: CMakeLists.txt  Editable.cpp  Editable.h  Selection.cpp  Selection.h  SpannableStringBuilder.cpp  SpannableStringBuilder.h
android/android/util/: CMakeLists.txt  Log.cpp
android/android/view/: CMakeLists.txt  KeyEvent.cpp  KeyEvent.h  MotionEvent.cpp  Surface.cpp  Surface.h  View.cpp  View.h
android/android/view/inputmethod/: BaseInputConnection.cpp  BaseInputConnection.h  CMakeLists.txt  InputMethodManager.cpp  InputMethodManager.h
android/android/widget/: CMakeLists.txt
android/java/: lang.h
android/java/lang/: CMakeLists.txt  ClassLoader.h  Object.h
android/java/lang/win/: SystemWin.cpp
private/: CMakeLists.txt
private/android++/: CMakeLists.txt
private/android/app/: ActivityHostWindow.cpp  ActivityHostWindow.h  ApplicationLoader.cpp  ApplicationLoader.h  ApplicationProcess.cpp  ApplicationProcess.h  CMakeLists.txt  MessageClientBase.h
private/android/app/win/: ApplicationProcessWin.cpp  WindowProviderWin.cpp  WindowProviderWin.h
private/android/content/: ApplicationLauncher.cpp  ApplicationLauncher.h  CMakeLists.txt  IntentPrivate.cpp  IntentPrivate.h
private/android/content/win/: ApplicationLauncherWin.cpp
private/android/graphics/: CMakeLists.txt  SurfaceTexturePrivate.cpp  SurfaceTexturePrivate.h
private/android/media/: CMakeLists.txt  MediaPlayerPrivate.cpp  MediaPlayerPrivate.h
private/android/media/mock/: MediaPlayerPrivateMock.cpp
private/android/media/win/: AudioTrackPrivateXAudio2Win.cpp  AudioTrackPrivateXAudio2Win.h  DataSourceProviderByteStream.cpp  XAudio2AudioDevice.cpp
private/android/opengl/: CMakeLists.txt  EGL.h  GLExtensions.cpp  GLExtensions.h  GLTexture.cpp  GLTexture.h  GLTextureHandle.cpp  GLTextureHandle.h
private/android/opengl/GLES2/: esUtil.cpp  esUtil.h
private/android/os/: Binder.cpp  Binder.h  BinderProvider.cpp  BinderProvider.h  BundlePrivate.cpp  BundlePrivate.h  CMakeLists.txt  MemoryFilePrivate.cpp  MemoryFilePrivate.h  ParcelPrivate.cpp  ParcelPrivate.h  ParcelablePrivate.h  PlatformEvent.cpp  PlatformEvent.h  PlatformEventPrivate.h  PlatformHandle.cpp  PlatformHandle.h  PlatformMutex.cpp  PlatformMutex.h  ServiceChannel.h  ServiceMessageClient.h  ServiceMessageHost.h  ServiceObject.cpp  ServiceObject.h  ServiceObjectRef.h
private/android/os/win/: BinderProviderWin.cpp  BinderProviderWin.h  BinderWin.cpp  BinderWin.h  MemoryFilePrivateWin.cpp  PlatformEventWin.cpp  PlatformHandleWin.cpp  PlatformMutexWin.cpp
private/android/util/: CMakeLists.txt
private/android/view/: CMakeLists.txt  KeyEventPrivate.h  SurfacePrivate.cpp  SurfacePrivate.h
private/android/view/inputmethod/: CMakeLists.txt
private/android/view/win/: SurfacePrivateWin.cpp
private/android/widget/: CMakeLists.txt
private/java/io/: ByteBufferProvider.h  ByteReader.cpp  ByteReader.h  ByteWriter.cpp  ByteWriter.h  CMakeLists.txt
samples/: CMakeLists.txt
samples/GL2JNIActivity/: CMakeLists.txt  GL2JNILib.cpp
samples/MediaPlayerServiceActivity/: CMakeLists.txt  DLLMain.cpp  Main.cpp  MediaPlayerHost.cpp  MediaPlayerHost.h  MediaPlayerService.cpp  MediaPlayerService.h  MediaPlayerServiceActivity.cpp  MediaPlayerServiceActivity.h  MediaRenderer.cpp  MediaRenderer.h  MediaSurface.cpp  MediaSurface.h  MediaView.cpp  MediaView.h
samples/MessengerActivity/: MessengerActivity.cpp  MessengerService.cpp
samples/TestActivity/: Main.cpp
